--- a/Project4-Part2/react-gcp-app-engine/src/App.css
+++ b/Project4-Part2/react-gcp-app-engine/src/App.css
@@ -7,20 +7,158 @@
 }
 
 .loginPage{
-  background-color: #4caf50;
-  background-image: url('https://target.scene7.com/is/image/Target/GUEST_c6230c8d-1f26-4724-a635-6e8171265822?wid=1200&hei=1200&qlt=80&fmt=webp');
-  background-size: cover;
-  background-position: center;
+  background: linear-gradient(217deg, rgba(128, 0, 255, 0.8), rgba(136, 0, 255, 0) 70.71%),
+            linear-gradient(127deg, #711666fb, rgba(0,255,0,0) 70.71%),
+            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+            min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: rgb(42, 12, 72);
+  /* background-image: url('https://target.scene7.com/is/image/Target/GUEST_c6230c8d-1f26-4724-a635-6e8171265822?wid=1200&hei=1200&qlt=80&fmt=webp'); */
+  /* background-size: cover; */
+  
   font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding:0;
-  height: 100vh;
+  
+}
+@keyframes confettiFall {
+  0% {
+    transform: translateY(0) rotateZ(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(600px) rotateZ(720deg);
+    opacity: 0;
+  }
+}
+.confetti1 {
+  width: 10px;
+  height: 10px;
+  background-color: #e44d26;
+  position: absolute;
+  animation: confettiFall 5s ease-in-out infinite;
+  transform-origin: 0 0;
+  opacity: 0;
+}
+.confetti2 {
+  width: 10px;
+  height: 10px;
+  background-color: #e1e426;
+  position: absolute;
+  animation: confettiFall 5s ease-in-out infinite;
+  transform-origin: 0 0;
+  opacity: 0;
+}
+.confetti3 {
+  width: 10px;
+  height: 10px;
+  background-color: #269ee4;
+  position: absolute;
+  animation: confettiFall 5s ease-in-out infinite;
+  transform-origin: 0 0;
+  opacity: 0;
+}
+.confetti4 {
+  width: 10px;
+  height: 10px;
+  background-color: #6526e4;
+  position: absolute;
+  animation: confettiFall 5s ease-in-out infinite;
+  transform-origin: 0 0;
+  opacity: 0;
+}
+.confetti5 {
+  width: 10px;
+  height: 10px;
+  background-color: rgb(231, 119, 181);
+  position: absolute;
+  animation: confettiFall 5s ease-in-out infinite;
+  transform-origin: 0 0;
+  opacity: 0;
+}
+
+#spin-score{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  bottom: 50px;
+}
+
+
+.loginPage h1{
+  position: fixed;
+  top: 80px;
+  z-index: 1;
+  color: rgb(42, 12, 72);
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  #homepagewheel {
+    animation: wheel-spin infinite 20s linear;
+  }
+}
+
+@keyframes wheel-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.spinning-wheel-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.container-text-center{
+background: linear-gradient(217deg, rgba(128, 0, 255, 0.8), rgba(136, 0, 255, 0) 70.71%),
+            linear-gradient(127deg, #711666fb, rgba(0,255,0,0) 70.71%),
+            linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+            min-height: 100vh;
+}
+
+.container-text-center h1{
+  position:absolute;
+  left: 15%;
+  top:30px;
+  color: rgb(42, 12, 72);
+}
+
+.score-display {
+  opacity: 0;
+  transform: translateY(-50px);
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
+
+.show-score {
+  opacity: 1;
+  transform: translateY(0);
+  animation: bounce 0.5s ease-in-out;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
 }
 
 .game-title {
   font-size: 24px;
   margin-bottom: 20px;
-  color: #333;
+  color: rgb(42, 12, 72);
 }
 
 .hangman-container {
